fixing dark mode issues

--- a/FrontEnd/blend-frontend/app/globals.css
+++ b/FrontEnd/blend-frontend/app/globals.css
@@ -7,9 +7,8 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
